--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,14 @@
     border: none;
     background: none;
 }
+
 .btn_menu span {
     width: 40px;
     height: 5px;
     background: white;
     border-radius: 10px;
 }
+
 @media (max-width: 768px) {
     .menu {
         /* display: none; */
@@ -53,14 +55,49 @@
         flex-direction: column;
         padding: 100px 40px;
     }
+
     .menu.active {
         display: flex;
         left: 0;
     }
+
     .btn_menu {
         display: flex;
     }
+
+
+    .btn_menu.active span:nth-child(3) {
+        transform: translate(2px, -3px) rotate(45deg);
+        transform-origin: left top;
+    }
+
+    .btn_menu.active span:nth-child(2) {
+        transform: scale(0);
+    }
+
+    .btn_menu.active span:nth-child(1) {
+        transform: translate(-10px, -25px) rotate(-45deg);
+        transform-origin: right bottom;
+    }
+
+    .btn_menu {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 5px;
+        background: none;
+        border: 0;
+        transition: 500ms;
+    }
+
+    .btn_menu span {
+        width: 40px;
+        height: 5px;
+        border-radius: 10px;
+        background: #ffffff;
+        transition: 500ms;
+    }
 }
+
 
 .menu {
     display: flex;
@@ -91,7 +128,18 @@
     background: linear-gradient(92deg, #0499dd 0%, #17c1bc 100%);
     color: white;
     border: none;
+
+    transition: 200ms;
 }
+
+/* .btn:hover {
+    background: #68098b;
+}  */
+.btn:active {
+    background: #6fb4d4;
+}
+
+
 
 .excursion {
     padding: 100px 0;
@@ -106,7 +154,7 @@
 .title {
     font-weight: 700;
     font-size: 24px;
-    
+
     color: #0499DD;
 }
 
@@ -119,12 +167,14 @@
 .excursion_head a:hover {
     text-decoration: none;
 }
+
 .excursion_box {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
-    gap:20px;
+    gap: 20px;
 }
+
 .excursion_item {
     max-width: 360px;
     /* height: 500px; */
@@ -132,7 +182,7 @@
     background-repeat: no-repeat;
     padding: 210px 15px 45px;
     color: white;
-    border-radius: 10px ;
+    border-radius: 10px;
 }
 
 .excursion_item p {
@@ -148,7 +198,7 @@
 }
 
 .details {
-     display: flex; 
+    display: flex;
     align-items: center;
     gap: 15px;
     margin-bottom: 20px;
@@ -169,63 +219,74 @@
     margin-top: 20px;
     font-size: 12px;
 }
+
 .about {
-    background: url(../img/bgabout.svg) no-repeat center / cover; 
+    background: url(../img/bgabout.svg) no-repeat center / cover;
     padding: 135px 0;
 }
 
-.about_box { 
+.about_box {
     max-width: 542px;
     background: rgba(255, 255, 255, 0.746);
-    border-radius:10px ;
+    border-radius: 10px;
     padding: 60px 80px;
     margin: 0 auto;
 }
+
 .about_box h2 {
     margin-bottom: 40px;
 
 }
+
 .about_box p {
-    color: black; 
+    color: black;
     margin-bottom: 20px;
     font-size: 14px;
 }
+
 .tour {
     padding: 100px 0;
 }
+
 .tour_box {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 40px 20px;
     margin-top: 90px;
 }
+
 .tour_item {
     display: flex;
     gap: 20px;
     align-items: flex-start;
 }
+
 .tour_item h3 {
     font-weight: 700;
     font-style: 18px;
     color: #0499DD;
     margin-bottom: 10px;
 }
+
 .tour_item p {
     font-weight: 500;
     font-size: 14px;
     color: #282828;
 }
+
 .tour_desc {
     max-width: 550px;
-    margin: 60px auto ;
+    margin: 60px auto;
     text-align: center;
 }
+
 .tour_desc p {
     font-weight: 500;
     font-size: 14px;
     color: #282828;
     margin-bottom: 20px;
 }
+
 .grid {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -233,101 +294,117 @@
     gap: 20px;
     margin-bottom: 30px;
 }
+
 @media (max-width: 768px) {
     .grid {
 
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 186px);
     }
-   .elem:nth-child(1) {
-    background: url(../img/2.png) no-repeat center / cover;
-    grid-column: 1/2;
-    grid-row: 1/3;
-   }
+
+    .elem:nth-child(1) {
+        background: url(../img/2.png) no-repeat center / cover;
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
 }
+
 .grid_mobile {
     display: none;
 }
-@media (max-width: 576px){
-    
+
+@media (max-width: 576px) {
+
     .grid {
         display: none;
-    
-    } 
-    
+
+    }
+
     .grid_mobile {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 186px 194px 260px;
         gap: 20px;
-        
+
     }
+
     .elem_m {
         border-radius: 15px;
     }
+
     .elem_m:nth-child(1) {
         background: url(../img/2.png) no-repeat center / cover;
         grid-column: 1/2;
         grid-row: 1/3;
-        
+
     }
+
     .elem_m:nth-child(2) {
         background: url(../img/3.png) no-repeat center / cover;
         grid-column: 2/3;
-        grid-row: 1/2;  
+        grid-row: 1/2;
     }
+
     .elem_m:nth-child(3) {
         background: url(../img/8.png) no-repeat center / cover;
         grid-column: 2/3;
-        grid-row: 2/3; 
+        grid-row: 2/3;
     }
+
     .elem_m:nth-child(4) {
         background: url(../img/1.png) no-repeat center / cover;
         grid-column: 1/3;
-        grid-row: 3/3; 
+        grid-row: 3/3;
     }
-    
+
 }
 
-@media (max-width: 768px){
-    
+@media (max-width: 768px) {
+
     .grid {
         display: none;
-    
-    } 
-    
+
+    }
+
     .grid_mobile {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 186px 194px 260px;
         gap: 20px;
-        
+
+        margin-bottom: 50px;
+
     }
+
     .elem_m {
         border-radius: 15px;
     }
+
     .elem_m:nth-child(1) {
         background: url(../img/2.png) no-repeat center / cover;
         grid-column: 1/2;
         grid-row: 1/3;
-        
+
     }
+
     .elem_m:nth-child(2) {
         background: url(../img/3.png) no-repeat center / cover;
         grid-column: 2/3;
-        grid-row: 1/2;  
+        grid-row: 1/2;
     }
+
     .elem_m:nth-child(3) {
         background: url(../img/8.png) no-repeat center / cover;
         grid-column: 2/3;
-        grid-row: 2/3; 
+        grid-row: 2/3;
     }
+
     .elem_m:nth-child(4) {
         background: url(../img/1.png) no-repeat center / cover;
         grid-column: 1/3;
-        grid-row: 3/3; 
+        grid-row: 3/3;
     }
-    
+
 }
 
 
@@ -337,54 +414,60 @@
     grid-column: 1/3;
     grid-row: 1/3;
 }
+
 .elem:nth-child(2) {
     background: url(../img/5.png) no-repeat center / cover;
     grid-column: 1/2;
     grid-row: 3/5;
 }
-.elem:nth-child(3){
+
+.elem:nth-child(3) {
     background: url(../img/6.png) no-repeat center / cover;
     grid-column: 2/3;
     grid-row: 3/4;
 }
+
 .elem:nth-child(4) {
     background: url(../img/7.png) no-repeat center / cover;
     grid-column: 2/3;
     grid-row: 4/5;
 }
+
 .elem:nth-child(5) {
     background: url(../img/2.png) no-repeat center / cover;
     grid-column: 3/5;
     grid-row: 1/5;
 }
+
 .elem:nth-child(6) {
     background: url(../img/3.png) no-repeat center / cover;
     grid-column: 5/6;
     grid-row: 1/3;
 }
+
 .elem:nth-child(7) {
     background: url(../img/4.png) no-repeat center / cover;
     grid-column: 6/7;
     grid-row: 1/3;
 }
+
 .elem:nth-child(8) {
     background: url(../img/8.png) no-repeat center / cover;
     grid-column: 5/7;
     grid-row: 3/5;
 }
+
 .elem {
     background-color: blueviolet;
     border-radius: 10px;
 }
 
-@media (max-width: 1200px) {
-
-}
+@media (max-width: 1200px) {}
 
 @media (max-width: 992px) {
-    .excursion_box{
-       flex-direction: column;
-       align-items: center;      
+    .excursion_box {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -402,46 +485,27 @@
     .tour_box {
         grid-template-columns: 1fr;
     }
+
     .promo h1 {
         font-size: 10vw;
     }
+
     .promo {
-        height: auto;
-        padding-bottom:80px ;
+        height: 100vh;
+        padding-bottom: 80px;
     }
+
     .about_box {
         padding: 43px 30px;
     }
+
     .about_box h2 {
         margin-bottom: 20px;
     }
 }
+
 @media (max-width: 576px) {
     .about {
         padding: 75px 0;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
