--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@
 
     .btn_menu.active span:nth-child(2) {
         transform: scale(0);
+        display: none;
     }
 
     .btn_menu.active span:nth-child(1) {
@@ -90,13 +91,50 @@
     }
 
     .btn_menu span {
-        width: 35px;
+        width: 40px;
         height: 5px;
         border-radius: 10px;
         background: #ffffff;
         transition: 500ms;
     }
 }
+
+@media (max-width: 576px) {
+
+    .btn_menu.active span:nth-child(3) {
+        transform: translate(2px, -13px) rotate(45deg);
+        transform-origin: left top;
+    }
+
+    .btn_menu.active span:nth-child(2) {
+        transform: scale(0);
+       display: none;
+    }
+
+    .btn_menu.active span:nth-child(1) {
+        transform: translate(-10px, -25px) rotate(-45deg);
+        transform-origin: right bottom;
+    }
+
+    .btn_menu {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 5px;
+        background: none;
+        border: 0;
+        transition: 500ms ;
+    }
+
+    .btn_menu span {
+        width: 40px;
+        height: 5px;
+        border-radius: 10px;
+        background: #ffffff;
+        transition: 500ms;
+    }
+
+}
+
 
 
 .menu {
@@ -242,6 +280,15 @@
     color: black;
     margin-bottom: 20px;
     font-size: 14px;
+}
+@media (max-width: 576px) {
+    
+    .about_box p {
+        color: black;
+        margin-bottom: 15px;
+        font-size: 12px;
+    }
+
 }
 
 .tour {
@@ -479,9 +526,6 @@
     .excursion_head a {
         display: none;
     }
-
-
-
     .tour_box {
         grid-template-columns: 1fr;
     }
@@ -508,4 +552,12 @@
     .about {
         padding: 75px 0;
     }
+}
+@media (max-width: 425px) {
+    .tour_item p {
+        font-weight: 500;
+        font-size: 12px;
+        color: #282828;
+    }
+
 }
